--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -2191,31 +2191,31 @@ cards:
       - newCasesBySpecimenDateRollingRate
 
     tabs:
-      - heading: UK
-        tabType: table
-        params:
-          - key: areaType
-            sign: "="
-            value: overview
+      # - heading: UK
+      #   tabType: table
+      #   params:
+      #     - key: areaType
+      #       sign: "="
+      #       value: overview
 
-        latestBy: newCasesBySpecimenDateRollingRate
-        sortBy: areaName
+      #   latestBy: newCasesBySpecimenDateRollingRate
+      #   sortBy: areaName
 
-        fields:
-          - label: Area
-            value: areaName
-            type: string
-            tooltip: ""
+      #   fields:
+      #     - label: Area
+      #       value: areaName
+      #       type: string
+      #       tooltip: ""
 
-          - label: Cases
-            value: newCasesBySpecimenDateRollingSum
-            type: numeric
-            tooltip: Total number of people tested positive in the 7-day period ending {date}
+      #     - label: Cases
+      #       value: newCasesBySpecimenDateRollingSum
+      #       type: numeric
+      #       tooltip: Total number of people tested positive in the 7-day period ending {date}
 
-          - label: Rate per 100,000 population
-            value: newCasesBySpecimenDateRollingRate
-            type: numeric
-            tooltip: Rate of total number of people tested positive in the 7-day period per 100,000 resident population
+      #     - label: Rate per 100,000 population
+      #       value: newCasesBySpecimenDateRollingRate
+      #       type: numeric
+      #       tooltip: Rate of total number of people tested positive in the 7-day period per 100,000 resident population
 
       - heading: Nation
         tabType: table
@@ -2341,31 +2341,31 @@ cards:
       - cumCasesByPublishDateRate
 
     tabs:
-      - heading: UK
-        tabType: table
-        params:
-          - key: areaType
-            sign: "="
-            value: overview
+      # - heading: UK
+      #   tabType: table
+      #   params:
+      #     - key: areaType
+      #       sign: "="
+      #       value: overview
 
-        latestBy: cumCasesByPublishDate
-        sortBy: areaName
+      #   latestBy: cumCasesByPublishDate
+      #   sortBy: areaName
 
-        fields:
-          - label: Area
-            value: areaName
-            type: string
-            tooltip: ""
+      #   fields:
+      #     - label: Area
+      #       value: areaName
+      #       type: string
+      #       tooltip: ""
 
-          - label: Cases
-            value: cumCasesByPublishDate
-            type: numeric
-            tooltip: Total number of people tested positive up to {date}
+      #     - label: Cases
+      #       value: cumCasesByPublishDate
+      #       type: numeric
+      #       tooltip: Total number of people tested positive up to {date}
 
-          - label: Rate per 100,000 population
-            value: cumCasesByPublishDateRate
-            type: numeric
-            tooltip: Rate of total confirmed people tested positive per 100,000 resident population
+      #     - label: Rate per 100,000 population
+      #       value: cumCasesByPublishDateRate
+      #       type: numeric
+      #       tooltip: Rate of total confirmed people tested positive per 100,000 resident population
 
       - heading: Nation
         tabType: table
