--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -65,6 +65,41 @@ cards:
       excluded:
         areaType:
           - overview
+        areaName:
+          - Scotland
+        areaCode:
+          - S12000005
+          - S12000006
+          - S12000008
+          - S12000010
+          - S12000011
+          - S12000013
+          - S12000014
+          - S12000017
+          - S12000018
+          - S12000019
+          - S12000020
+          - S12000021
+          - S12000023
+          - S12000026
+          - S12000027
+          - S12000028
+          - S12000029
+          - S12000030
+          - S12000033
+          - S12000034
+          - S12000035
+          - S12000036
+          - S12000038
+          - S12000039
+          - S12000040
+          - S12000041
+          - S12000042
+          - S12000045
+          - S12000047
+          - S12000048
+          - S12000049
+          - S12000050
 
     fullWidth: true
     abstract: >
@@ -144,6 +179,41 @@ cards:
       excluded:
         areaType:
           - overview
+        areaName:
+          - Scotland
+        areaCode:
+          - S12000005
+          - S12000006
+          - S12000008
+          - S12000010
+          - S12000011
+          - S12000013
+          - S12000014
+          - S12000017
+          - S12000018
+          - S12000019
+          - S12000020
+          - S12000021
+          - S12000023
+          - S12000026
+          - S12000027
+          - S12000028
+          - S12000029
+          - S12000030
+          - S12000033
+          - S12000034
+          - S12000035
+          - S12000036
+          - S12000038
+          - S12000039
+          - S12000040
+          - S12000041
+          - S12000042
+          - S12000045
+          - S12000047
+          - S12000048
+          - S12000049
+          - S12000050
 
     fullWidth: false
     abstract: >
@@ -199,6 +269,41 @@ cards:
       excluded:
         areaType:
           - overview
+        areaName:
+          - Scotland
+        areaCode:
+          - S12000005
+          - S12000006
+          - S12000008
+          - S12000010
+          - S12000011
+          - S12000013
+          - S12000014
+          - S12000017
+          - S12000018
+          - S12000019
+          - S12000020
+          - S12000021
+          - S12000023
+          - S12000026
+          - S12000027
+          - S12000028
+          - S12000029
+          - S12000030
+          - S12000033
+          - S12000034
+          - S12000035
+          - S12000036
+          - S12000038
+          - S12000039
+          - S12000040
+          - S12000041
+          - S12000042
+          - S12000045
+          - S12000047
+          - S12000048
+          - S12000049
+          - S12000050
 
     fullWidth: false
     abstract: >
