excludes Scotland by area code in spring booster card

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -63,8 +63,8 @@ cards:
     cardType: chart
     locationAware:
       excluded:
-        areaName:
-          - Scotland
+        areaCode:
+          - S92000003
 
     fullWidth: true
     abstract: >
