changes inclusion list

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -65,6 +65,7 @@ cards:
       included:
         areaName:
           - England
+          - Barking and Dagenham
         areaType:
           - region
           - utla
