--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -65,128 +65,320 @@ cards:
       included:
         areaName:
           - England
+          - Adur
+          - Allerdale
+          - Amber Valley
+          - Arun
+          - Ashfield
+          - Ashford
+          - Aylesbury Vale
+          - Babergh
           - Barking and Dagenham
           - Barnet
           - Barnsley
+          - Barrow-in-Furness
+          - Basildon
+          - Basingstoke and Deane
+          - Bassetlaw
           - Bath and North East Somerset
           - Bedford
           - Bexley
           - Birmingham
+          - Blaby
           - Blackburn with Darwen
           - Blackpool
+          - Bolsover
           - Bolton
+          - Boston
           - Bournemouth, Christchurch and Poole
           - Bracknell Forest
           - Bradford
+          - Braintree
+          - Breckland
           - Brent
+          - Brentwood
           - Brighton and Hove
           - Bristol, City of
+          - Broadland
           - Bromley
+          - Bromsgrove
+          - Broxbourne
+          - Broxtowe
+          - Burnley
           - Bury
           - Calderdale
+          - Cambridge
           - Camden
+          - Cannock Chase
+          - Canterbury
+          - Carlisle
+          - Castle Point
           - Central Bedfordshire
+          - Charnwood
+          - Chelmsford
+          - Cheltenham
+          - Cherwell
           - Cheshire East
           - Cheshire West and Chester
+          - Chesterfield
+          - Chichester
+          - Chiltern
+          - Chorley
+          - Colchester
+          - Copeland
+          - Corby
           - Cornwall and Isles of Scilly
+          - Cotswold
           - County Durham
           - Coventry
+          - Craven
+          - Crawley
           - Croydon
+          - Dacorum
           - Darlington
+          - Dartford
+          - Daventry
           - Derby
+          - Derbyshire Dales
           - Doncaster
           - Dorset
+          - Dover
           - Dudley
           - Ealing
+          - East Cambridgeshire
+          - East Devon
+          - East Hampshire
+          - East Hertfordshire
+          - East Lindsey
+          - East Northamptonshire
           - East Riding of Yorkshire
+          - East Staffordshire
+          - East Suffolk
+          - Eastbourne
+          - Eastleigh
+          - Eden
+          - Elmbridge
           - Enfield
+          - Epping Forest
+          - Epsom and Ewell
+          - Erewash
+          - Exeter
+          - Fareham
+          - Fenland
+          - Folkestone and Hythe
+          - Forest of Dean
+          - Fylde
           - Gateshead
+          - Gedling
+          - Gloucester
+          - Gosport
+          - Gravesham
+          - Great Yarmouth
           - Greenwich
+          - Guildford
           - Hackney and City of London
           - Halton
+          - Hambleton
           - Hammersmith and Fulham
+          - Harborough
           - Haringey
+          - Harlow
+          - Harrogate
           - Harrow
+          - Hart
           - Hartlepool
+          - Hastings
+          - Havant
           - Havering
           - Herefordshire, County of
+          - Hertsmere
+          - High Peak
           - Hillingdon
+          - Hinckley and Bosworth
+          - Horsham
           - Hounslow
+          - Huntingdonshire
+          - Hyndburn
+          - Ipswich
           - Isle of Wight
           - Islington
           - Kensington and Chelsea
+          - Kettering
+          - King's Lynn and West Norfolk
           - Kingston upon Hull, City of
           - Kingston upon Thames
           - Kirklees
           - Knowsley
           - Lambeth
+          - Lancaster
           - Leeds
           - Leicester
+          - Lewes
           - Lewisham
+          - Lichfield
+          - Lincoln
           - Liverpool
           - Luton
+          - Maidstone
+          - Maldon
+          - Malvern Hills
           - Manchester
+          - Mansfield
           - Medway
+          - Melton
+          - Mendip
           - Merton
+          - Mid Devon
+          - Mid Suffolk
+          - Mid Sussex
           - Middlesbrough
           - Milton Keynes
+          - Mole Valley
+          - New Forest
+          - Newark and Sherwood
           - Newcastle upon Tyne
+          - Newcastle-under-Lyme
           - Newham
+          - North Devon
+          - North East Derbyshire
           - North East Lincolnshire
+          - North Hertfordshire
+          - North Kesteven
           - North Lincolnshire
+          - North Norfolk
           - North Somerset
           - North Tyneside
+          - North Warwickshire
+          - North West Leicestershire
+          - Northampton
           - Northumberland
+          - Norwich
           - Nottingham
+          - Nuneaton and Bedworth
+          - Oadby and Wigston
           - Oldham
+          - Oxford
+          - Pendle
           - Peterborough
           - Plymouth
           - Portsmouth
+          - Preston
           - Reading
           - Redbridge
           - Redcar and Cleveland
+          - Redditch
+          - Reigate and Banstead
+          - Ribble Valley
           - Richmond upon Thames
+          - Richmondshire
           - Rochdale
+          - Rochford
+          - Rossendale
+          - Rother
           - Rotherham
+          - Rugby
+          - Runnymede
+          - Rushcliffe
+          - Rushmoor
           - Rutland
+          - Ryedale
           - Salford
           - Sandwell
+          - Scarborough
+          - Sedgemoor
           - Sefton
+          - Selby
+          - Sevenoaks
           - Sheffield
           - Shropshire
           - Slough
           - Solihull
+          - Somerset West and Taunton
+          - South Bucks
+          - South Cambridgeshire
+          - South Derbyshire
           - South Gloucestershire
+          - South Hams
+          - South Holland
+          - South Kesteven
+          - South Lakeland
+          - South Norfolk
+          - South Northamptonshire
+          - South Oxfordshire
+          - South Ribble
+          - South Somerset
+          - South Staffordshire
           - South Tyneside
           - Southampton
           - Southend-on-Sea
           - Southwark
+          - Spelthorne
+          - St Albans
           - St. Helens
+          - Stafford
+          - Staffordshire Moorlands
+          - Stevenage
           - Stockport
           - Stockton-on-Tees
           - Stoke-on-Trent
+          - Stratford-on-Avon
+          - Stroud
           - Sunderland
+          - Surrey Heath
           - Sutton
+          - Swale
           - Swindon
           - Tameside
+          - Tamworth
+          - Tandridge
+          - Teignbridge
           - Telford and Wrekin
+          - Tendring
+          - Test Valley
+          - Tewkesbury
+          - Thanet
+          - Three Rivers
           - Thurrock
+          - Tonbridge and Malling
           - Torbay
+          - Torridge
           - Tower Hamlets
           - Trafford
+          - Tunbridge Wells
+          - Uttlesford
+          - Vale of White Horse
           - Wakefield
           - Walsall
           - Waltham Forest
           - Wandsworth
           - Warrington
+          - Warwick
+          - Watford
+          - Waverley
+          - Wealden
+          - Wellingborough
+          - Welwyn Hatfield
           - West Berkshire
+          - West Devon
+          - West Lancashire
+          - West Lindsey
+          - West Oxfordshire
+          - West Suffolk
           - Westminster
           - Wigan
           - Wiltshire
+          - Winchester
           - Windsor and Maidenhead
           - Wirral
+          - Woking
           - Wokingham
           - Wolverhampton
+          - Worcester
+          - Worthing
+          - Wychavon
+          - Wycombe
+          - Wyre
+          - Wyre Forest
           - York
         areaType:
           - region
