--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -669,76 +669,76 @@ cards:
 
 # Not shown for Regions or LAs
 
-  - heading: Deaths within 28 days of positive test by date reported
-    cardType: chart
-    locationAware:
-      excluded:
-        areaType:
-          - region
-          - ltla
-          - utla
+  # - heading: Deaths within 28 days of positive test by date reported
+  #   cardType: chart
+  #   locationAware:
+  #     excluded:
+  #       areaType:
+  #         - region
+  #         - ltla
+  #         - utla
 
-    fullWidth: true
-    abstract: >
-      Number people who died within 28 days of being identified as a COVID-19 case by a positive test. 
-      Data from England, Northern Ireland, Scotland and Wales use different methodologies, so can’t be directly compared. 
-      Data are shown by the date the figures appeared in the published totals.  
+  #   fullWidth: true
+  #   abstract: >
+  #     Number people who died within 28 days of being identified as a COVID-19 case by a positive test. 
+  #     Data from England, Northern Ireland, Scotland and Wales use different methodologies, so can’t be directly compared. 
+  #     Data are shown by the date the figures appeared in the published totals.  
 
-    download:
-      - newDeaths28DaysByPublishDate
-      - cumDeaths28DaysByPublishDate
+  #   download:
+  #     - newDeaths28DaysByPublishDate
+  #     - cumDeaths28DaysByPublishDate
 
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: normal
-        fields:
-          - label: Number of deaths
-            value: newDeaths28DaysByPublishDate
-            tooltip: Daily number of deaths within 28 days of first positive test by date reported
-            type: bar
-            colour: 0
-            rollingAverage: false
+  #   tabs:
+  #     - heading: Daily
+  #       tabType: chart
+  #       barType: normal
+  #       fields:
+  #         - label: Number of deaths
+  #           value: newDeaths28DaysByPublishDate
+  #           tooltip: Daily number of deaths within 28 days of first positive test by date reported
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
 
-          - label: Deaths (7-day average)
-            value: newDeaths28DaysByPublishDate
-            tooltip: 7 day rolling average of the daily number of deaths within 28 days of first positive test
-            type: line
-            colour: 3
-            fill: false
-            rollingAverage: true
+  #         - label: Deaths (7-day average)
+  #           value: newDeaths28DaysByPublishDate
+  #           tooltip: 7 day rolling average of the daily number of deaths within 28 days of first positive test
+  #           type: line
+  #           colour: 3
+  #           fill: false
+  #           rollingAverage: true
 
-      - heading: Total
-        tabType: chart
-        fields:
-          - label: Number of deaths
-            value: cumDeaths28DaysByPublishDate
-            tooltip: Total number of deaths within 28 days of first positive test by date reported
-            type: bar
-            colour: 0
-            rollingAverage: false
+  #     - heading: Total
+  #       tabType: chart
+  #       fields:
+  #         - label: Number of deaths
+  #           value: cumDeaths28DaysByPublishDate
+  #           tooltip: Total number of deaths within 28 days of first positive test by date reported
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
 
-      - heading: Data table
-        tabType: table
-        fields:
-          - label: Date reported
-            value: date
-            type: date
-            tooltip: Date reported on coronavirus.data.gov.uk
+  #     - heading: Data table
+  #       tabType: table
+  #       fields:
+  #         - label: Date reported
+  #           value: date
+  #           type: date
+  #           tooltip: Date reported on coronavirus.data.gov.uk
 
-          - label: Daily deaths
-            value: newDeaths28DaysByPublishDate
-            type: numeric
-            tooltip: Daily number of deaths within 28 days of first positive test by date reported
+  #         - label: Daily deaths
+  #           value: newDeaths28DaysByPublishDate
+  #           type: numeric
+  #           tooltip: Daily number of deaths within 28 days of first positive test by date reported
 
-          - label: Total deaths
-            value: cumDeaths28DaysByPublishDate
-            type: numeric
-            tooltip: Total number of deaths within 28 days of first positive test by date reported
+  #         - label: Total deaths
+  #           value: cumDeaths28DaysByPublishDate
+  #           type: numeric
+  #           tooltip: Total number of deaths within 28 days of first positive test by date reported
 
-      - heading: About
-        tabType: metadata
-        filename: cardMetadata/deaths/cardDeaths28DaysTimeSeries.md
+  #     - heading: About
+  #       tabType: metadata
+  #       filename: cardMetadata/deaths/cardDeaths28DaysTimeSeries.md
 ##############################################################################################################################
 
   - heading: Daily change in reported deaths with 28 days of positive test by date of death
@@ -1962,91 +1962,91 @@ cards:
 
 # NOTE: similar chart for England defined as separate card above - was previously used as has report date radio button
 
-  - heading: Deaths within 60 days of positive test by date of death
-    cardType: chart
-    locationAware:
-      included:
-        areaType:
-          - nation
-          - region
-          - utla
-          - ltla
+  # - heading: Deaths within 60 days of positive test by date of death
+  #   cardType: chart
+  #   locationAware:
+  #     included:
+  #       areaType:
+  #         - nation
+  #         - region
+  #         - utla
+  #         - ltla
 
-    fullWidth: true
-    abstract: >
-      Number of people who had either died within 60 days of being identified as a COVID-19 case, 
-      or died more than 60 days after being identified as a case and have COVID-19 mentioned on their death certificate. 
-      Data for the last 5 days, highlighted in grey, are incomplete. Data are shown by date of death.
+  #   fullWidth: true
+  #   abstract: >
+  #     Number of people who had either died within 60 days of being identified as a COVID-19 case, 
+  #     or died more than 60 days after being identified as a case and have COVID-19 mentioned on their death certificate. 
+  #     Data for the last 5 days, highlighted in grey, are incomplete. Data are shown by date of death.
 
-    download:
-      - newDeaths60DaysByDeathDate
-      - cumDeaths60DaysByDeathDate
-      - newDeaths60DaysByPublishDate
-      - cumDeaths60DaysByPublishDate
+  #   download:
+  #     - newDeaths60DaysByDeathDate
+  #     - cumDeaths60DaysByDeathDate
+  #     - newDeaths60DaysByPublishDate
+  #     - cumDeaths60DaysByPublishDate
 
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: normal
-        fields:
-          - label: Number of deaths
-            value: newDeaths60DaysByDeathDate
-            tooltip: Daily number of deaths within 60 days of first positive test by date of death
-            type: bar
-            colour: 0
-            rollingAverage: false
-            highlight:
-              from: -4
-              to: 0
-              colour: 6
-              label: "Most recent 5 days (incomplete)"
+  #   tabs:
+  #     - heading: Daily
+  #       tabType: chart
+  #       barType: normal
+  #       fields:
+  #         - label: Number of deaths
+  #           value: newDeaths60DaysByDeathDate
+  #           tooltip: Daily number of deaths within 60 days of first positive test by date of death
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+  #           highlight:
+  #             from: -4
+  #             to: 0
+  #             colour: 6
+  #             label: "Most recent 5 days (incomplete)"
 
-          - label: Deaths (7-day average)
-            value: newDeaths60DaysByDeathDate
-            tooltip: 7 day rolling average of the daily number of deaths within 60 days of first positive test
-            type: line
-            colour: 3
-            fill: false
-            rollingAverage:
-              window: 7
-              clipEnd: 4
+  #         - label: Deaths (7-day average)
+  #           value: newDeaths60DaysByDeathDate
+  #           tooltip: 7 day rolling average of the daily number of deaths within 60 days of first positive test
+  #           type: line
+  #           colour: 3
+  #           fill: false
+  #           rollingAverage:
+  #             window: 7
+  #             clipEnd: 4
 
-      - heading: Total
-        tabType: chart
-        fields:
-          - label: Number of deaths
-            value: cumDeaths60DaysByDeathDate
-            tooltip: Total number of deaths within 60 days of first positive test by date of death
-            type: bar
-            colour: 0
-            rollingAverage: false
-            highlight:
-              from: -4
-              to: 0
-              colour: 6
-              label: "Most recent 5 days (incomplete)"
+  #     - heading: Total
+  #       tabType: chart
+  #       fields:
+  #         - label: Number of deaths
+  #           value: cumDeaths60DaysByDeathDate
+  #           tooltip: Total number of deaths within 60 days of first positive test by date of death
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+  #           highlight:
+  #             from: -4
+  #             to: 0
+  #             colour: 6
+  #             label: "Most recent 5 days (incomplete)"
 
-      - heading: Data table
-        tabType: table
-        fields:
-          - label: Date of death
-            value: date
-            type: date
-            tooltip: Date on which the death occurred
+  #     - heading: Data table
+  #       tabType: table
+  #       fields:
+  #         - label: Date of death
+  #           value: date
+  #           type: date
+  #           tooltip: Date on which the death occurred
 
-          - label: Daily deaths
-            value: newDeaths60DaysByDeathDate
-            type: numeric
-            tooltip: Daily number of deaths within 60 days of first positive test by date of death
+  #         - label: Daily deaths
+  #           value: newDeaths60DaysByDeathDate
+  #           type: numeric
+  #           tooltip: Daily number of deaths within 60 days of first positive test by date of death
 
-          - label: Total deaths
-            value: cumDeaths60DaysByDeathDate
-            type: numeric
-            tooltip: Total number of deaths within 60 days of first positive test by date of death
+  #         - label: Total deaths
+  #           value: cumDeaths60DaysByDeathDate
+  #           type: numeric
+  #           tooltip: Total number of deaths within 60 days of first positive test by date of death
 
-      - heading: About
-        tabType: metadata
-        filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
+  #     - heading: About
+  #       tabType: metadata
+  #       filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
 
 ##############################################################################################################################
 
