--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -27,15 +27,18 @@ headlineNumbers:
 
       - label: Latest 7 days
         value: newCasesBySpecimenDateRollingSum
-        tooltip: Number of new cases reported in the 7 days up to {date}
+        tooltip: Number of new cases with specimen taken in the 7 days up to {date}
 
-      - label: Change from previous 7 days
+  - caption: Change from previous 7 days
+    valueItems:
+
+      - label: Number
         value: newCasesBySpecimenDateChange
-        tooltip: Change in number of new cases reported in the 7 days up to {date} compared with the previous 7 day period.
+        tooltip: Change in number of new cases with specimen taken in the 7 days up to {date} compared with the previous 7 day period.
 
-      - label: Percentage change
+      - label: Percentage
         value: newCasesBySpecimenDateChangePercentage
-        tooltip: Percentage change in number of new cases reported in the 7 days up to {date} compared with the previous 7 day period.
+        tooltip: Percentage change in number of new cases with specimen taken in the 7 days up to {date} compared with the previous 7 day period.
 
   - caption: First Episodes
     valueItems: 
